<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.ChiTietActivity">
    <TextView
        style="@style/tieude"
        android:text="@string/thongtin" />

    <EditText
        android:id="@+id/txtMa"
        style="@style/txt"
        android:editable="false"
        android:hint="@string/mamonhoc" />

    <EditText
        android:id="@+id/txtHoTen"
        style="@style/txt"
        android:hint="@string/tenmonhoc" />

    <EditText
        android:id="@+id/txtDiaChi"
        style="@style/txt"
        android:hint="@string/chiphi" />

    <TextView
        style="@style/tieude"
        android:text="@string/chucnang" />
    <LinearLayout style="@style/chucnang">

        <Button
            android:id="@+id/btnXoa"
            style="@style/btn"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/them"
            android:drawableLeft="@drawable/ic_delete_black_24dp"
            android:text="@string/xoa"
            android:textColorLink="#CDDC39" />
        />


        <Button
            android:id="@+id/btnSua"
            style="@style/btn"
            android:layout_marginRight="10dp"
            android:background="@drawable/them"
            android:drawableLeft="@drawable/ic_update_black_24dp"
            android:text="@string/sua"
            android:textColorLink="#CDDC39" />
        />

        <Button
            android:id="@+id/btnClear"
            style="@style/btn"
            android:layout_marginRight="10dp"
            android:background="@drawable/them"
            android:drawableLeft="@drawable/ic_clear_alll_black_24dp"
            android:text="@string/clear"
            android:textColorLink="#CDDC39" />
        />


    </LinearLayout>
</LinearLayout>
