<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ktc.GiaoDien.ChiTietGVActivity">

    <TextView
        style="@style/tieude"
        android:text="@string/thongtin" />

    <EditText
        android:id="@+id/txtMa"
        style="@style/txt"
        android:hint="@string/ma" />

    <EditText
        android:id="@+id/txtHoTen"
        style="@style/txt"
        android:hint="@string/hoten" />

    <EditText
        android:id="@+id/txtDiaChi"
        style="@style/txt"
        android:hint="@string/sdt" />

    <TextView
        style="@style/tieude"
        android:text="@string/chucnang" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="@style/btnxoa" />

        <Button
            android:id="@+id/button2"
            style="@style/btnsua" />

        <Button
            android:id="@+id/button3"
            style="@style/btnclear" />

    </LinearLayout>
</LinearLayout>
